--- a/src/correlation_block_business.ipynb
+++ b/src/correlation_block_business.ipynb
@@ -77,7 +77,7 @@
    "source": [
     "type_result = {}\n",
     "for loc in location:\n",
-    "    business = request.urlretrieve(\"https://maps.googleapis.com/maps/api/place/nearbysearch/json?location={},{}&radius=20&key=AIzaSyCbEGttxtl4aCH8TNE6Mm9AN3ksKqzfAAc\".format(loc[0],loc[1]))\n",
+    "    business = request.urlretrieve(\"".format(loc[0],loc[1]))\n",
     "    with open(business[0], encoding='utf8') as f:\n",
     "        businessresult = json.load(f)\n",
     "        for i in businessresult[\"results\"]:\n",
@@ -189,7 +189,7 @@
    "outputs": [],
    "source": [
     "for loc in location:\n",
-    "    business = request.urlretrieve(\"https://maps.googleapis.com/maps/api/place/nearbysearch/json?location={},{}&radius=20&key=AIzaSyCbEGttxtl4aCH8TNE6Mm9AN3ksKqzfAAc\".format(loc[0],loc[1]))\n",
+    "    business = request.urlretrieve(\"".format(loc[0],loc[1]))\n",
     "    with open(business[0], encoding='utf8') as f:\n",
     "        businessresult = json.load(f)\n",
     "        for i in businessresult[\"results\"]:\n",
